--- a/css/custom.scss
+++ b/css/custom.scss
@@ -23,7 +23,7 @@ input {
   height: 2em;
   width: 4em;
   font-size: 2em;
-  color: teal;
+  color: rgb(18, 147, 89);
   border: 1px solid red;
   border-radius: 4px;
   box-shadow: 2px 2px 0 1px red;
@@ -48,8 +48,8 @@ button {
   margin: 0 auto;
   font-family: "MATH";
   background: white;
-  border: 2px solid teal;
-  color: teal;
+  border: 2px solid rgb(18, 147, 89);
+  color: rgb(18, 147, 89);
 
   #canvas {
     width: 150px;
@@ -77,7 +77,7 @@ button {
     margin-bottom: 0.5em;
     font-size: 30px;
     border: none;
-    color: red;
+    color: black;
     text-align: center;
   }
 
@@ -89,4 +89,10 @@ button {
 .glowRed {
   border-color: red;
   box-shadow: 0 0 10px red;
+}
+.correct {
+  color: rgb(6, 152, 12);
+}
+.wrong {
+  color: red;
 }
